express-nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-node-app
  labels:
    teir: web
spec:
  replicas: 3
  selector:
    matchLabels:
      teir: web

  template:
    metadata:
      name: express-node-app
      labels:
        teir: web
    spec:
      containers:
      - name: express-container
        image: elmansey/social-media-app:1.3
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: config-volume
            mountPath: "/app/.env"
            subPath: .env
            readOnly: true

      volumes:
        - name: config-volume
          configMap:
            name: myconfigmap
            items:
            - key: "envfile"
              path: ".env"
