node-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app-svc
  name: node-app-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    teir: web
  type: ClusterIP
